--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
 .App {
   text-align: center;
+  width: 40%;
+  margin: auto
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+body{
   background-color: #282c34;
-  min-height: 100vh;
+  color: rgb(233, 233, 233);
+}
+
+.inputs{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.input{
+  width: 20rem;
+  height: 2rem;
+  display: flex;
+}
+
+.input input{
+  padding: 0.5rem;
+}
+
+.input div{
+  flex: 1;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.input button{
+  flex: 1
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input input:focus{
+  outline: none;
+}
+
+button:hover{
+  cursor: pointer;
+}
+
+.participant{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1rem;
+}
+
+.participant div:hover{
+  cursor: pointer;
 }
