supported roles: hunter, detective, healer, mafia

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+.wrapper {
+  min-height: 100%;
+
+  /* Equal to height of footer */
+  /* But also accounting for potential margin-bottom of last child */
+  margin-bottom: -50px;
+}
+.footer,
+.push {
+  height: 50px;
+  text-align: center;
+}
+
 .App {
   text-align: center;
   width: 40%;
@@ -7,6 +24,7 @@
 body{
   background-color: #282c34;
   color: rgb(233, 233, 233);
+  font-family: lato;
 }
 
 .inputs{
@@ -56,6 +74,10 @@ button:hover{
 
 .participant div:hover{
   cursor: pointer;
+}
+
+.participant-in-game{
+  margin: 1rem 0;
 }
 
 .participants{
