--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ body{
 }
 
 .input button{
-  flex: 1
+  flex: 0
 }
 
 .input input:focus{
@@ -77,9 +77,8 @@ button:hover{
 }
 
 .participant-in-game{
-  margin: 1rem 0;
+  margin: 1rem auto;
   width: 50%;
-  margin: auto;
 }
 
 .participants{
