--- a/src/App.css
+++ b/src/App.css
@@ -56,8 +56,33 @@ body{
   outline: none;
 }
 
+.MuiDialog-paper{
+  width: 15rem;
+}
+
+#alert-dialog-title{
+  text-align: center;
+}
+
 button:hover{
   cursor: pointer;
+}
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 3.5rem;            /* Footer height */
+  text-align: center;
 }
 
 .participant{
